--- a/style.scss
+++ b/style.scss
@@ -1,16 +1,22 @@
+/*@import "variantes";
+*/
+$textoprincipal:'IBM Plex Sans',
+sans-serif;
+$tamañotexto: x-large;
+
 header {
    color: black;
    border-bottom: 0.50rem solid #EDCDBB;
    background-color: #fdf7e2;
+}
 
-   a {
-      text-decoration: none;
-      color: black;
-   }
-   #menuBurger {
-      display: none;
-   }
-   
+a {
+   text-decoration: none;
+   color: black;
+}
+
+#menuBurger {
+   display: none;
 }
 
 img {
@@ -29,12 +35,10 @@ img {
    padding-left: 10px;
 
    p {
-      font-family: 'IBM Plex Sans', sans-serif;
-      font-size: x-large;
+      font-family: $textoprincipal;
+      font-size: $tamañotexto;
    }
-
 }
-
 footer {
    color: black;
    border-top: 0.50rem solid #EDCDBB;
