--- a/style.css
+++ b/style.css
@@ -6,9 +6,13 @@ header {
   background-color: #fdf7e2;
 }
 
-a {
+header a {
   text-decoration: none;
   color: black;
+}
+
+header a:hover {
+  color: darkgrey;
 }
 
 #menuBurger {
@@ -43,4 +47,3 @@ footer {
   padding-top: 20px;
   padding-bottom: 30px;
 }
-/*# sourceMappingURL=style.css.map */
