--- a/style.scss
+++ b/style.scss
@@ -8,11 +8,16 @@ header {
    color: black;
    border-bottom: 0.50rem solid #EDCDBB;
    background-color: #fdf7e2;
-}
 
-a {
-   text-decoration: none;
-   color: black;
+   a {
+      text-decoration: none;
+      color: black;
+
+      &:hover {
+         color: darkgrey
+      }
+     
+   }
 }
 
 #menuBurger {
@@ -39,6 +44,7 @@ img {
       font-size: $tamañotexto;
    }
 }
+
 footer {
    color: black;
    border-top: 0.50rem solid #EDCDBB;
